_docs/v0.50/embedding/start.md
---
version: v0.50
has_magic_breadcrumbs: true
show_category_breadcrumb: true
show_title_breadcrumb: false
category: Embedding
title: 'Embedding overview'
source_url: 'https://github.com/metabase/metabase/blob/master/docs/embedding/start.md'
layout: new-docs
---

# Embedding overview

## [Introduction](./introduction)

What is embedding, and how does it work?

## [Interactive embedding](./interactive-embedding)

The solution to self-service customer analytics: embed the full Metabase app in your app. Interactive embedding integrates with your data permissions to let people slice and dice data on their own using Metabase's query builder.

## [Interactive embedding quick start](./interactive-embedding-quick-start-guide)

You'll embed the full Metabase application in your app. Once logged in, people can view a Metabase dashboard in your web app, and be able to use the full Metabase application to explore their data, and only their data.

## [Static embedding](./static-embedding)

Also known as Signed Embedding, Static embedding is a secure way to embed charts and dashboards. Static embeds are view only; people won't be able to drill-through charts and tables.

## [Parameters for static embeds](./static-embedding-parameters)

You can pass parameters between Metabase and your website via the embedding URL to specify how Metabase items should look and behave inside the iframe on your website.

## [Public embeds](../questions/sharing/public-links)

Admins can also create unsecured public links or embeds of questions and dashboards.
